# Healthcare_FT

./: MANIFEST.in  pyproject.toml
gspo_readmit/: __init__.py  cfg.py  data.py  inference.py  metrics.py  prompts.py  rewards.py  trainer_gspo.py  utils.py
scripts/: eval_yesno.py  export_peft.py  gspo_train.py  sft_warmup.py
