# pyproject.toml
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gspo-readmit"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "torch>=2.3",
  "numpy>=1.24.0",             # Used in metrics.py and utils.py
  "transformers>=4.44.0",
  "datasets>=2.20.0",
  "accelerate>=0.34.0",
  "trl>=0.10.0",              # GSPO/GRPO trainers
  "peft>=0.12.0",
  "bitsandbytes>=0.43.3",     # QLoRA (4/8-bit) — training
  "evaluate>=0.4.2",
  "scikit-learn>=1.5.0",
  "tqdm>=4.66.0",
  "rich>=13.7.0",
  "wandb>=0.17.0"
]

[tool.setuptools]
# Explicitly specify only the gspo_readmit package
packages = ["gspo_readmit"]
